apps/cli/test/fixtures/parse-errors/siren/broken.siren
this is not valid siren syntax!!!